<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_division"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button_division"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button_multiplay"
        app:layout_constraintBottom_toTopOf="@+id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button_division" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button_minus"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply" />


    <Button
        android:id="@+id/button_plus"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_equally"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button4"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button7"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button7"
        app:layout_constraintBottom_toTopOf="@id/button0"
        app:layout_constraintEnd_toStartOf="@id/button8"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />


    <Button
        android:id="@+id/button0"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button2"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"

        android:text="@string/text_button5"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button8"
        app:layout_constraintBottom_toTopOf="@id/button_clear"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button_clear"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_equally"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@id/button8" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button3"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@id/button_division"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />


    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"

        android:text="@string/text_button6"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


    <Button
        android:id="@+id/button9"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button9"
        app:layout_constraintBottom_toTopOf="@id/button_equally"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button_equally"
        android:layout_width="@dimen/widthButton"
        android:layout_height="@dimen/heightButton"
        android:layout_margin="@dimen/marginButton"
        android:text="@string/text_button_equally"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <EditText
        android:id="@+id/editTextScoreBoard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:backgroundTint="#00BCD4"
        android:ems="10"
        android:hint="@string/hint_editTextScoreBoard"
        android:inputType="number|text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button_division"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.6"
        android:autofillHints="" />


</androidx.constraintlayout.widget.ConstraintLayout>